--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -18,7 +18,9 @@
         <%= link_to raw("<i class='icon small_liked'></i> 优质帖子"), popular_topics_path, class: "popular" %>
       </li> /
       <li<%= " class=active" if action_name == "no_reply"  %>><%= link_to "无人问津", no_reply_topics_path, rel: 'nofollow' %></li> /
-      <li<%= " class=active" if action_name == "recent"  %>><%= link_to "最新创建", recent_topics_path, rel: 'nofollow' %></li>
+      <li<%= " class=active" if action_name == "recent"  %>><%= link_to "最新创建", recent_topics_path, rel: 'nofollow' %></li> /
+      <li<%= " class=active" if action_name == "week_popular"  %>><%= link_to "一周热门", week_popular_topics_path, rel: 'nofollow' %></li> /
+      <li<%= " class=active" if action_name == "diary_popular"  %>><%= link_to "当日热门", diary_popular_topics_path, rel: 'nofollow' %></li>
     </ul>
   </div>
 <% end %>
